# DynGen

./: .gitignore  CMakeLists.txt  README.md  filter.jsfx  sketch.dyngen  testsuite.scd
.github/workflows/: build.yml
src/: dyngen.cpp  dyngen.h  dyngen_script.cpp  dyngen_script.h  eel2_adapter.cpp  eel2_adapter.h  jsfx.cpp  jsfx.h  library.cpp  library.h  string_utils.h
src/Classes/: DynGen.sc  DynGenTranspiler.sc  JSFX.sc
src/HelpSource/: DynGenDef.schelp  DynGenRT.schelp
src/HelpSource/Classes/: DynGen.schelp  DynGenDef.schelp  DynGenExpr.schelp  DynGenRT.schelp  DynGenTranspiler.schelp
